apps/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
        sidecar.istio.io/inject: "true"
    spec:
      volumes:
      - name: data-and-extensions
        persistentVolumeClaim:
          claimName: freshrss-data
      containers:
      - name: freshrss
        image: freshrss/freshrss:1.27.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data-and-extensions
          mountPath: /config/www/freshrss
        ports:
        - containerPort: 80
          name: freshrss-http
        - containerPort: 443
          name: freshrss-https
