apps/freshrss/service.yaml
# Source: freshrss/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - name: freshrss-http
      port: 80
