apps/freshrss/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: freshrss-virtualservice
spec:
  hosts:
    - freshrss.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: freshrss.freshrss.svc.cluster.local
            port:
              number: 80
