apps/freshrss/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: freshrss
spec:
  action: CUSTOM
  selector:
    matchLabels:
      app: freshrss
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - freshrss.home.alden.ai
            notPaths:
              - "/api/fever.php"
              - "/api/greader.php"
              - "/api/query.php"
